--- a/lab1/lab1_report.tex
+++ b/lab1/lab1_report.tex
@@ -55,19 +55,27 @@ The results of running the simulator for each of the scenarios are below:
     \begin{tikzpicture}
     \node[circle,draw, minimum size=1cm] (A) at (0,0) {N1};
     \node[circle,draw, minimum size=1cm] (B) at (3,0) {N2};
-    \draw (A) -- (B) node[pos=0.5, sloped, above] {1 Mbps};
+    \draw (A) -- (B) node[pos=0.5, above] {1 Mbps} node[pos=0.5, below] {1s} ; 
     \end{tikzpicture}
 
     The output of the simulation was:
     \begin{lstlisting} 
-    Created:0  ID:1 Received: 0.009000000000000001
+    Created:0  ID:1 Received: 1.008
     \end{lstlisting}
+
+    These are our verifying calculations:
+    \begin{align*}
+    d &= d_{trans} + d_{prop}\\
+      &= (1000*8)/1000000 + 1\\
+      &= 1.008
+    \end{align*}
+
 
   \item 
     \begin{tikzpicture}
     \node[circle,draw, minimum size=1cm] (A) at (0,0) {N1};
     \node[circle,draw, minimum size=1cm] (B) at (3,0) {N2};
-    \draw (A) -- (B) node[pos=0.5, sloped, above] {100 bps};
+    \draw (A) -- (B) node[pos=0.5, sloped, above] {100 bps} node[pos=0.5, sloped, below] {10ms};
     \end{tikzpicture}
 
     The output of the simulation was: 
@@ -75,11 +83,17 @@ The results of running the simulator for each of the scenarios are below:
       Created:0  ID:1 Received: 80.01
     \end{lstlisting}
 
+    These are our verifying calculations:
+    \begin{align*}
+    d &= d_{trans} + d_{prop}\\
+      &= (1000*8)/100 + 0.01\\
+      &= 80.01
+    \end{align*}
   \item 
     \begin{tikzpicture}
     \node[circle,draw, minimum size=1cm] (A) at (0,0) {N1};
     \node[circle,draw, minimum size=1cm] (B) at (3,0) {N2};
-    \draw (A) -- (B) node[pos=0.5, sloped, above] {1 Mbps};
+    \draw (A) -- (B) node[pos=0.5, sloped, above] {1 Mbps} node[pos=0.5, sloped, below] {10ms};
     \end{tikzpicture}
 
   The output of the simulation was:
@@ -87,26 +101,36 @@ The results of running the simulator for each of the scenarios are below:
     Created:0  ID:1  Received:0.018000000000000002
     Created:0  ID:2  Received:0.026000000000000002
     Created:0  ID:3  Received:0.034
-    Created:2.0  ID:4  Received:0.017999999999999794
+    Created:2.0  ID:4  Received:2.018
   \end{lstlisting}
+  These are our verifying calculations:
+  \begin{align*}
+    d1 &= d1_{trans} + d1_{prop}\\
+      &= (1000*8)/1000000 + 0.01\\
+      &= 0.018
+  \end{align*}
+  \begin{align*}
+    d2 &= d1_{trans} + d2_{trans} + d2_{prop} \\
+      &= 0.018 + (1000*8)/1000000 + 0.01\\
+      &= 0.026
+  \end{align*}
+  \begin{align*}
+    d3 &= d2_{trans} + d3_{trans} + d3_{prop}\\
+      &= 0.026 + (1000*8)/1000000 + 0.01\\
+      &= 0.034
+  \end{align*}
+  \begin{align*}
+    d4 &= 2.0 + d4_{trans} + d4_{prop}\\
+      &= 2.0 + (1000*8)/1000000 + 0.01\\
+      &= 2.018
+  \end{align*}
+  
 \end{enumerate}
-
-% \begin{lstlisting}
-% class Node:
-%     def __init__(self,scheduler):
-%         self.scheduler = scheduler
-
-%     def handle_message(self,t,message):
-%         print "Received at",t,':',message.body
-%         if message.times < 3:
-%             self.scheduler.add(t+1.5, message, self.handle_message)
-%         message.times += 1
-% \end{lstlisting}
 
 \section{Three Nodes}
 
 In this section we will use the simulator to setup a network consisting of three nodes and two links. We will test two fast links and one fast link with a slow link. For each scenario we will show our network configuration, the last 5 lines of the simulation ouput and the calculations we used to verify the output.
-The results are as follows.  
+The results are as follows:  
 
 \begin{enumerate}
   \item 
@@ -117,6 +141,38 @@ The results are as follows.
     \draw (A) -- node[pos=0.5,above] {1 Mbps} node[midway,below]{100ms}(B) -- (C) node[pos=0.5,above] {1 Mbps} node[midway,below]{100ms};
   \end{tikzpicture}
 
+  Our data for the two fast links is below:
+  \begin{lstlisting}
+    1Mbps
+    Created:0  ID:995  Received:8.176000000000007
+    Created:0  ID:996  Received:8.184000000000006
+    Created:0  ID:997  Received:8.192000000000007
+    Created:0  ID:998  Received:8.200000000000006
+    Created:0  ID:999  Received:8.208000000000007
+
+    1Gbps
+    Created:0  ID:995  Received:0.2079760000000001
+    Created:0  ID:996  Received:0.2079840000000001
+    Created:0  ID:997  Received:0.20799200000000012
+    Created:0  ID:998  Received:0.20800000000000013
+    Created:0  ID:999  Received:0.20800800000000014
+  \end{lstlisting}
+  After examining our output we determined that the transmission delay dominated.
+  \newline
+  These are our verifying calculations:
+  \begin{align*}
+    d &= d_{trans1} + d_{prop1} + (1000 * d_{trans2}) + d_{prop2}\\
+      &= ((1000*8)/1000000) + .1 + (1000 * (1000*8)/1000000) + 0.1\\
+      &= 0.008 + 0.1 + (1000 * 0.008) + 0.1\\
+      &= 8.208
+  \end{align*}
+  \begin{align*}
+    d &= d_{trans1} + d_{prop1} + (1000 * d_{trans2}) + d_{prop2}\\
+      &= ((1000*8)/1000000000) + .1 + (1000 * (1000*8)/1000000000) + 0.1\\
+      &= 0.000008 + 0.1 + (1000 * 0.000008) + 0.1\\
+      &= 0.208008
+  \end{align*}
+
   \item 
   \begin{tikzpicture}
     \node[circle,draw, minimum size=1cm] (A) at (0,0) {A};
@@ -124,6 +180,23 @@ The results are as follows.
     \node[circle,draw, minimum size=1cm] (C) at (6,0) {C};
     \draw (A) -- node[pos=0.5,above] {1 Mbps}  node[midway,below]{100ms}(B) -- (C) node[pos=0.5, above] {256 Kbps}  node[midway,below]{100ms};
   \end{tikzpicture}
+
+  Our data for the one fast link and one slow link is below: 
+  \begin{lstlisting}
+    Created:0  ID:995  Received:31.333000000000002
+    Created:0  ID:996  Received:31.364250000000002
+    Created:0  ID:997  Received:31.395500000000002
+    Created:0  ID:998  Received:31.426750000000002
+    Created:0  ID:999  Received:31.458000000000002
+  \end{lstlisting}
+  These are our verifying calculations:
+  \begin{align*}
+    d &= d_{trans1} + d_{prop1} + (1000 * d_{trans2}) + d_{prop2}\\
+      &= ((1000*8)/1000000) + .1 + (1000 * (256*8)/1000000) + 0.1\\
+      &= 0.008 + 0.1 + (1000 * 0.03125) + 0.1\\
+      &= 31.458
+  \end{align*}
+
 \end{enumerate}
 
 % \vspace{0.5cm}
@@ -141,19 +214,53 @@ The results are as follows.
 
 
 \section{Queueing Theory}
+In this section we explore whether or not the simulator can validate basic queueing theory. 
+We use the same configuration as the twonodes3.txt. 
+\newline
+\newline
+The node configuration is shown below:
+\newline
 
+\begin{tikzpicture}
+    \node[circle,draw, minimum size=1cm] (A) at (0,0) {A};
+    \node[circle,draw, minimum size=1cm] (B) at (3,0) {B};
+    \draw (A) -- (B) node[pos=0.5, sloped, above] {1 Mbps} node[pos=0.5, sloped, below] {10ms};
+\end{tikzpicture}
 
+\includegraphics[width=11cm]{graphs/line}
+\newline
+This is the graph of our queue theory output. As you can see the red is the experimental queueing delay data. The Blue line is the theoretical data. It is apparent that the simulator does indeed validate basic queueing theory. However, like any experimental model the simulator is inperfect and there are slight differences above the 80\% usage mark.
+\newline
+\newline
+The load we used to generate cover the full range of values from 0 to 1. We used extra points in the range from 0.9 to 1.0 to get more data points in this critical range. The data is found in the following table:
+\begin{center}
+  \begin{tabular}{c c}
+  \hline
+  Rate & Load \\ [0.5ex]
+  \hline\hline
+  0.1 & 12.5 \\
+  0.2 & 25.0 \\
+  0.3 & 37.5 \\
+  0.4 & 50.0 \\
+  0.5 & 62.5 \\
+  0.6 & 75.0 \\
+  0.7 & 87.5 \\
+  0.8 & 100.0 \\
+  0.9 & 112.5 \\
+  0.95 & 118.75 \\
+  0.97 & 121.25 \\ [1ex]
+  \end{tabular}
+  \end{center}
 
-% \includegraphics[width=11cm]{graphs/queueing_theory}
-This is the graph of our queue theory output. 
+The data we collected follows the theoretical exponential curve proving that the bene simulator can correctly simulate queueing theory. 
 \section{Summary}
-
+In this lab we successfully explored some of the basic functionality of the bene simulator. We were able to simulate a two node basic network with various bandwidths and propagation delays. We then even sent multiple packets of data across our networks and the simulator responded well. See section on two nodes. 
+\newline
+\newline
+In the section on three nodes, we explored a slightly more complicated network consisting of three nodes and two links. The first scenario contained two links with the same exact bandwidth and propagation delay. While the second scenario included a link that was about 75\% of the speed as the first link. The simulator also responded well to and gave us the same answers as we got in our calulations by hand. See section on three nodes.
+\newline
+Lastly, we were able to prove that the Bene simulator can correctly validate basic queueing theory with a good margin of error. See graph from section on queueing theory. 
 % $d_{trans}$ is the transmission delay. $d_{prop}$ is the propagation delay.
 
-% \begin{align*}
-% d &= d_{trans} + d_{prop}\\
-%   &= (1000*8)/1000000 + 0.05\\
-%   &= 0.058
-% \end{align*}
 
 \end{document}
